# TaskQueue

./: README.md
TaskQueue/: .gitignore  CMakeLists.txt  LoadBalancer.h  ObjectPool.h  README.md  TaskDispatch.h  TaskGroup.cpp  TaskGroup.h  TaskOperator.cpp  TaskOperator.h  TaskQueue.cpp  TaskQueue.h  TaskQueueConstant.cpp  TaskQueueConstant.h  TaskQueueDefine.h  TaskQueueFactory.cpp  TaskQueueFactory.h  TaskQueueReporter.cpp  TaskQueueReporter.h
TaskQueue/backend/: ConcurrencyQueueImpl.cpp  ConcurrencyQueueImpl.h  ConcurrencyThreadPool.cpp  ConcurrencyThreadPool.h  Consumable.h  GroupImpl.cpp  GroupImpl.h  IQueueImpl.h  IThreadPool.cpp  IThreadPool.h  QueueDefine.h  SerialQueueImpl.cpp  SerialQueueImpl.h  SerialThreadPool.cpp  SerialThreadPool.h  TaskOperatorBackend.h  TaskQueueFactoryImpl.cpp  TaskQueueFactoryImpl.h  WorkThread.cpp  WorkThread.h  WorkThreadBase.cpp  WorkThreadBase.h  WorkThreadConcurrency.cpp  WorkThreadConcurrency.h  WorkThreadSerial.cpp  WorkThreadSerial.h
TaskQueue/common/: CppVersion.h  HESingleton.h  HETimerHelper.cpp  HETimerHelper.h  LWBarrier.cpp  LWBarrier.h  LogHelper.h  Semaphore.cpp  Semaphore.h  SysUtils.cpp  SysUtils.h  ThreadRWLock.cpp  ThreadRWLock.hpp  concurrentqueue.h
TaskQueue/test/: CMakeLists.txt  TestDeadlockScenario.cpp  TestTaskGroup.cpp  TestTaskGroupComprehensive.cpp  TestTaskOperator.cpp  TestTaskQueue.cpp  TestTaskQueueComprehensive.cpp  TestTaskQueueConcurrency.cpp  TestTaskQueueFactory.cpp  TestTaskQueueGroupIntegration.cpp
